# dpui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  gitea-sync.yaml  release.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.md
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  tasks.json
scripts/: build-release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: displayplacer.rs  hotkeys.rs  lib.rs  presets.rs  system_tray.rs
src/components/: AlertDialog.tsx  ConfirmDialog.tsx  DisplayCanvas.tsx  DisplayCard.tsx  ErrorDialog.tsx  HotkeyManager.tsx  PresetManager.tsx
src/store/: useDisplayStore.ts
src/types/: display.ts
