[package]
name = "dpui"
version = "1.0.0"
description = "Display Manager for macOS"
authors = ["DPUI Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dev-jelly/dpui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[profile.release]
# Enable optimizations for size
opt-level = "s"
# Enable Link Time Optimization
lto = true
# Enable stripping of symbols
strip = true
# Reduce parallel code generation units
codegen-units = 1
# Reduce panic information
panic = "abort"

